src/objects/Apttus_Config2__ConfigCustomDisplayActions__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Config2__ActionArea__c</fullName>
        <description>Indicates whether the action is displayed on left, right, center section of the action bar. The value more indicates it is displayed under more button.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Select left, right, center or more as the action display area</inlineHelpText>
        <label>Action Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ActionLabelName__c</fullName>
        <description>The name of the custom label for the action.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The name of the custom label for the action.</inlineHelpText>
        <label>Action Label Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ActionName__c</fullName>
        <description>Enter the API name for the action.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the API name for the action.</inlineHelpText>
        <label>Action Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ActionPage__c</fullName>
        <description>The name of the custom action page. A custom action may implemented either as a Visualforce page or as a custom class</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The name of the custom action page. A custom action may implemented either as a Visualforce page or as a custom class</inlineHelpText>
        <label>Action Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ActionParams__c</fullName>
        <description>The url parameters for the action. Multiple parameters may be passed by using the ampersand character to separate each parameter. Each parameter is expressed in the form param-name=param-value. For e.g. templateName=XYZ&amp;draft=true</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The url parameters for the action. Multiple parameters may be passed by using the ampersand character to separate each parameter. Each parameter is expressed in the form param-name=param-value. For e.g. templateName=XYZ&amp;draft=true</inlineHelpText>
        <label>Action Params</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ActionStyleClass__c</fullName>
        <description>Indicates style class used  for the action.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter style class name for the action.</inlineHelpText>
        <label>Action Style Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ActionType__c</fullName>
        <description>The action type</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The action type</inlineHelpText>
        <label>Action Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Behavior__c</fullName>
        <description>The behavior the open page action takes.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The behavior the open page action takes.</inlineHelpText>
        <label>Behavior</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DisplayAs__c</fullName>
        <description>Indicates whether the action is displayed as action or task or both</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter action or task or both to display the action on a page as action button or task.</inlineHelpText>
        <label>Display As</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DisplayType__c</fullName>
        <description>The action display type 

Valid values are the following 

Cart Line Item 
Asset Line Item</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The action display type 

Valid values are the following 

Cart Line Item 
Asset Line Item</inlineHelpText>
        <label>Display Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Flow__c</fullName>
        <description>The flow associated with the action</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The flow associated with the action</inlineHelpText>
        <label>Flow</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>